--- a/package.json
+++ b/package.json
@@ -4,16 +4,49 @@
   "description": "\"# ES6Note\"",
   "main": "index.js",
   "dependencies": {
-    "babel-preset-latest": "^6.24.1",
+    "@babel/polyfill": "^7.12.1",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "babel-preset-stage-3": "^6.24.1"
+    "babel-preset-stage-3": "^6.24.1",
+    "core-js": "^2.6.12",
+    "react": "^17.0.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@babel/cli": "^7.13.10",
+    "@babel/core": "^7.13.10",
+    "@babel/generator": "^7.13.9",
+    "@babel/parser": "^7.13.12",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/plugin-proposal-decorators": "^7.13.5",
+    "@babel/plugin-transform-arrow-functions": "^7.13.0",
+    "@babel/plugin-transform-member-expression-literals": "^7.12.13",
+    "@babel/preset-env": "^7.13.12",
+    "babel-cli": "^6.26.0",
+    "babel-node": "0.0.1-security",
+    "babel-preset-latest": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "babelify": "^8.0.0"
+  },
   "scripts": {
+    "build": "babel index.js -o dist/index.js",
+    "index": "babel-node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "browserify": {
+    "transform": [
+      [
+        "babelify",
+        {
+          "presets": [
+            "latest"
+          ]
+        }
+      ]
+    ]
   },
   "repository": {
     "type": "git",
